# playagain_pipeline

./: .gitignore  README.md  data_processing_gui.py  fix.py  fix2.py  fix3.py  playground.ipynb  powergrasp.ipynb  preliminary_dataprocessing.ipynb  requirements.txt  run_gui.py
Documentation/: THESIS_DOCUMENTATION.md
filestorage/: convert_pickle_to_mat.py  emg_plot_reworked.py  main_window.py  validation_tab.py
performance_assessment/: __init__.py  _generate_plots.py  model_comparison.py  performance_assessment.ipynb  playground.ipynb  session_picker_ui.py
playagain_pipeline/: README.md  __init__.py  advanced_dataset_creation.py  config.json  game_recorder.py  prediction_server.py  pyproject.toml  requirements.txt  training_game_coordinator.py  unity_launcher.py
playagain_pipeline/calibration/: __init__.py  calibration_stability.py  calibration_validation.py  calibrator.py  calibrator_old.py
playagain_pipeline/config/: __init__.py  config.py
playagain_pipeline/core/: __init__.py  data_manager.py  data_manager_old.py  gesture.py  session.py
playagain_pipeline/data/: participant_groups.json  plot_calibrations.py  quality_review.json  quality_review_summary.csv
playagain_pipeline/data/Participant_Info/: Calibration.json  VP_00.json  VP_01.json  VP_02.json  VP_03.json  VP_04.json  VP_05.json  VP_06.json  VP_07.json  VP_08.json  VP_09.json  VP_10.json  VP_11.json  VP_12.json  VP_13.json  VP_14.json  test.json
playagain_pipeline/data/scripts/: convert_csv_to_npy.py  convert_pkl_to_csv_and_npy.py  data_viewer.py  import_recordings.py  plot_calibrations.py
playagain_pipeline/data/sessions/: Participant_Info
playagain_pipeline/data/validation_runs/: visualize_results.py
playagain_pipeline/device_interfaces/devices/: device.py  intan.py  mindrove.py  muovi.py  noxon.py  nswitch.py  quattrocento.py  sessantaquattro.py  syncstation.py
playagain_pipeline/device_interfaces/dicts/: intan.py  muovi.py  noxon.py  nswitch.py  quattrocento.py  sessantaquattro.py  syncstation.py
playagain_pipeline/device_interfaces/enums/: device.py  intan.py  muovi.py  noxon.py  nswitch.py  quattrocento.py  sessantaquattro.py  syncstation.py
playagain_pipeline/device_interfaces/gui/template_widgets/: devices.py  intan.py  mindrove.py  muovi.py  muovi_plus.py  noxon.py  nswitch.py  otb_devices.py  quattrocento.py  sessantaquattro.py  syncstation.py
playagain_pipeline/device_interfaces/gui/ui/: devices_test.ui  devices_widget.ui  intan_widget.ui  main_window.ui  mindrove_widget.ui  muovi_widget_test.ui  noxon_widget.ui  nswitch_widget.ui  otb_devices_widget.ui  quattrocento_light_test.ui  quattrocento_test.ui  quattrocento_widget.ui  sessantaquattro_test.ui  sessantaquattro_widget.ui  syncstation_widget.ui
playagain_pipeline/device_interfaces/gui/ui_compiled/: devices_test.py  devices_widget.py  intan_widget.py  main_window.py  mindrove_widget.py  muovi_plus_widget.py  muovi_test.py  muovi_widget.py  muovi_widget_test.py  noxon_widget.py  nswitch_widget.py  otb_devices_widget.py  quattrocento_light_test.py  quattrocento_light_widget.py  quattrocento_test.py  quattrocento_widget.py  sessantaquattro_test.py  sessantaquattro_widget.py  syncstation_widget.py
playagain_pipeline/device_interfaces/tests/: devices_test.py  muovi_test.py  quattrocento_light_test.py  quattrocento_test.py  sessantaquattro_test.py  syncstation_test.py
playagain_pipeline/devices/: __init__.py  emg_device.py
playagain_pipeline/evaluation/: __init__.py  core.py  cross_domain_eval.py  game_eval.py  intra_session_eval.py  loaders.py  metrics.py  session_eval.py  threshold_eval.py  unity_eval.py
playagain_pipeline/gui/: __init__.py  gui_style.py  main_window.py
playagain_pipeline/gui/widgets/: __init__.py  bracelet_graphic.py  busy_overlay.py  calibration_dialog.py  calibration_dialog_old.py  config_dialog.py  emg_plot.py  emg_plot_panel.py  emg_plot_popout.py  evaluation_tab.py  feature_selection.py  game_protocol_popup.py  home_tab.py  main_window_v2.py  participant_groups_dialog.py  performance_tab.py  protocol_popup.py  protocol_widget.py  quattrocento_loader.py  quattrocento_training_dialog.py  quickstart_wizard.py  rotation_validation_dialog.py  status_strip.py  thesis_report_dialog.py  training_dialog.py  validation_tab.py  workflow_stepper.py
playagain_pipeline/models/: __init__.py  classifier.py  feature_pipeline.py
playagain_pipeline/performance_assessment/: __init__.py  _generate_plots.py  model_comparison.py  performance_assessment.ipynb  session_picker_ui.py
playagain_pipeline/protocols/: __init__.py  protocol.py
playagain_pipeline/utils/: __init__.py  fill_rest_gaps_in_existing_sessions.py  migrate_requested_gesture.py  platform_utils.py  rest_gap_filler.py
playagain_pipeline/validation/: README.md  README_report.md  __init__.py  __main__.py  calibration_report.py  config.py  corpus.py  corpus_report.py  cv_strategies.py  cv_strategies_holdout.py  experiments_example.yaml  feature_cache.py  game_corpus.py  game_report.py  generate_thesis_outputs.py  intra_session_compare.py  participant_groups.py  plots_thesis.py  recompute_calibration_metrics.py  runner.py  thesis_reports.py  threshold_plots.py  threshold_report.py
playagain_pipeline/validation/configurations/: experiments_example.yaml
(+38 files in other folders)
