[project]
name = "playagain-pipeline"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "absl-py==2.2.1",
    "aiohttp==3.8.6",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blosc2==3.2.1",
    "bs4==0.0.2",
    "catboost==1.2.8",
    "certifi==2025.11.12",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "comm==0.2.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cython==3.0.12",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "device-interfaces",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fau-colors==1.10.1",
    "filelock==3.18.0",
    "flammkuchen==1.0.3",
    "flatbuffers==25.2.10",
    "fonttools==4.61.1",
    "fqdn==1.5.1",
    "freetype-py==2.5.1",
    "frozenlist==1.5.0",
    "fsspec==2025.3.0",
    "functions==0.7.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "graphviz==0.21",
    "grpcio==1.71.0",
    "gui-custom-elements",
    "h11==0.14.0",
    "h5py==3.13.0",
    "hsluv==5.0.4",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "keras==3.9.1",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "libclang==18.1.1",
    "llvmlite==0.44.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mindrove==0.0.10",
    "mistune==3.1.3",
    "ml-dtypes==0.5.1",
    "mlxtend==0.23.4",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.2.0",
    "namex==0.0.8",
    "narwhals==1.32.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "ndindex==1.9.2",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.3",
    "notebook-shim==0.2.4",
    "nptyping==1.4.4",
    "numba==0.61.0",
    "numexpr==2.10.2",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "opt-einsum==3.4.0",
    "optree==0.14.1",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.3.7",
    "plotly==6.0.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "protobuf==5.29.4",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyparsing==3.3.1",
    "pyqt5-qt5==5.15.16",
    "pyqt5-sip==12.17.0",
    "pyqt5-stubs==5.15.6.0",
    "pyqtgraph==0.13.7",
    "pyside6==6.7.1",
    "pyside6-addons==6.7.1",
    "pyside6-essentials==6.7.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "qtpy==2.4.3",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.24.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scikit-video==1.1.11",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "shiboken6==6.7.1",
    "sip==6.10.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "sympy==1.13.1",
    "tables==3.10.2",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.5.0",
    "terminado==0.18.1 ; sys_platform != 'win32'",
    "threadpoolctl==3.6.0",
    "tifffile==2025.3.13",
    "tinycss2==1.4.0",
    "torch==2.6.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.0",
    "typish==1.9.3",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "vispy==0.14.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "widgetsnbextension==4.0.13",
    "wrapt==1.17.2",
    "yarl==1.18.3",
]

[tool.uv.sources]
device-interfaces = { path = "../../../PlayAgain-Game1/device-interfaces-main" }
gui-custom-elements = { path = "../../../PlayAgain-Game1/gui-custom-elements-main" }
